###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
        name = "agent",
        repo_name = "com_agent",
)

## MODULE.bazel
bazel_dep(name = "rules_proto_grpc", version = "5.0.0")
bazel_dep(name = "rules_proto_grpc_cpp", version = "5.0.0")
bazel_dep(name = "grpc", version = "1.66.0")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "zlib", version = "1.3.1.bcr.3")
bazel_dep(name = "rapidjson", version = "1.1.0.bcr.20241007")
